# wb_bot

./: .gitignore  README.MD  dev_runner.py  main.py  pyproject.toml
app/commons/: global_deps.py
app/commons/responses/: alarm.py  edit.py  extensions.py  general.py  task.py
app/commons/services/: connection.py  extensions.py  payment.py  profile.py  task.py  user.py
app/commons/services/validators/: date_validators.py
app/commons/utils/: __init__.py  custom_logger.py  dump.py  language_loader.py  structuring_data.py  template_callback.py
app/enums/: constants.py  general.py  logging.py
app/keyboards/inline/: general.py
app/localization/: ru.py
app/middlewares/: logging.py
app/models/: alchemy_helper.py  base.py  bot.py  coefficient.py  subscription.py  task.py  user.py  warehouse.py
app/models/crud/: agents.py  client.py  clients.py  coefficients.py  hubs.py  slots.py
app/routes/callbacks/: __init__.py  alarm.py  fast_connect.py  full_connect.py  general.py  payment.py  task_create.py  task_delete.py  task_update.py  task_view.py
app/routes/handlers/: __init__.py  commands.py
app/routes/states/: task_states.py  user_states.py
app/schemas/: bot.py  coefficient.py  general.py  subscription.py  task.py  typed_dict.py  user.py  warehouse.py
app/schemas/mixins/: pagination.py
config/: .env.template  LoggerdictConfig.py  config.py
docs/: architecture_and_philosophy.md
docs/ru/: architecture_and_philosophy.md  git-cheatsheet.md  python_structures.md
