[project]
name = "wildberries"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "pydantic[email]>=2.11.5",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "watchfiles>=1.0.5",
    "greenlet>=3.2.3",
]
